syntax = "proto3";
option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

message IsSegmentUsedRequest{
	int32 groupId = 1;
	int64 segmentId = 2;
}

message IsSegmentUsedResponse{
  bool IsUsed = 1;
}